judgehost/judgings/b6d05355b062-0/endpoint-default/7/287/313/compile.out
Compiling failed with exitcode 1, compiler output:
fre.cpp: In function 'int main()':
fre.cpp:12:9: error: 'gets' was not declared in this scope
  while (gets(s)) {
         ^~~~
fre.cpp:12:9: note: suggested alternative: 'fgets'
  while (gets(s)) {
         ^~~~
         fgets
